fixed invisible text on map element
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@13986 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/elements/upfront-maps/css/edit.css
+++ b/elements/upfront-maps/css/edit.css
@@ -180,6 +180,10 @@ border-width: 11px;
 	font-size: 1em;
 	width:100%;
 }
+.uf_el_map_initial-overlay input[type="text"]:focus {
+	background:rgb(255,255,255);
+	color:rgb(100,100,100);
+}
 
 /* refresh button */
 .uf_el_map_initial-overlay button {
